--- a/ca4015_LouiseAnderson_assignment1.ipynb
+++ b/ca4015_LouiseAnderson_assignment1.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPKXIPqWSPDnmGpf2jdpnIS",
+      "authorship_tag": "ABX9TyPnpH7+D3eRdJZMeHBMoar3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1677,7 +1677,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Diabetes Prediction using Maching Learning methods - Random Forest and AutoML - Louise Anderson\n",
+        "# Diabetes Prediction using Maching Learning methods - Random Forest and AutoML - Louise Anderson 06/10/2022\n",
+        "\n",
+        "Available at: https://github.com/anderl23/Diabetes-Prediction-using-Maching-Learning-methods---Random-Forrest-and-AutoML---Louise-Anderson/blob/main/ca4015_LouiseAnderson_assignment1.ipynb\n",
         "\n",
         "## Introduction and Context \n",
         "The dataset examined in this notebook originates from the National Institute of Diabetes and Digestive and Kidney Diseases. The patients represented by this dataset are all females of Pima Indian heritage who are at least 21 years of age.\n",
@@ -2637,7 +2639,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "dghCFlrEvmQO",
         "outputId": "8771dea7-8661-4f08-e0f8-2ad7a61d6f72"
@@ -2829,7 +2832,7 @@
         "### What is AutoML?\n",
         "In machine learning there are many different algorithms that may be utilised, with some more suited/more accurate than others, depending on the problem we are trying to solve. Knowing which algorithm to select based on the problem statement comes with experience or requires trial and error of various approaches.  \n",
         "Once an algorithm is selected, we can attempt to improve our model by trying and testing various different model parameters in order to achieve optimum performance. Again, this will not be one size fits all. Hyperparameter tuning will differ based on what we are trying to achieve and can be a tedious manual task.\n",
-        "When it come to the evaluation our models, what method should be used to do so? Will an 80/20 train test split be sufficient or is k-fold cross validation required? An 80/20 train test split may produce a fluke result. However, k-fold cross validation can be computationally expensive and slow.\n",
+        "When it comes to the evaluation of our model, what method should be used to do so? Will an 80/20 train test split be sufficient or is k-fold cross validation required? An 80/20 train test split may produce a fluke result. However, k-fold cross validation can be computationally expensive and slow.\n",
         "\n",
         "Automated machine learning (AutoML) assists Data Scientists in machine learning algorithm selection, hyperparameter tuning of models and model evaluation.\n",
         "It does this by producing machine learning solutions so that we are no longer required to perform numerous, code-heavy inquiries on model selection, data preparation, hyperparameter tuning and evalution methods. \n",
@@ -3387,7 +3390,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "z7DtD487yac_",
         "outputId": "3effb9df-8472-4252-b041-a538e3672cc9"
@@ -3902,7 +3906,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "T-QdUiM4GtMN",
         "outputId": "69bf49b8-d263-4e37-ff13-74f2378988a4"
