--- a/ca4015_LouiseAnderson_assignment1.ipynb
+++ b/ca4015_LouiseAnderson_assignment1.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPZnwmimxk0RNkQG/irAidQ",
+      "authorship_tag": "ABX9TyN9fju75sm0pZWhV5ajzE9R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2850,7 +2850,7 @@
         "  - NLP\n",
         "  - Associated Rules Mining\n",
         "- Time-series\n",
-        "  - Forcast prediction\n",
+        "  - Forecast prediction\n",
         "\n",
         "Passing the dataset and target variable to the setup function initializes a number of preprocesses to the data in just one line of code including:\n",
         "- Data preparation:\n",
