--- a/ca4015_LouiseAnderson_assignment1.ipynb
+++ b/ca4015_LouiseAnderson_assignment1.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN9fju75sm0pZWhV5ajzE9R",
+      "authorship_tag": "ABX9TyMELkicel8t7FE/GbARQmTT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2875,7 +2875,7 @@
         "\n",
         "After selecting our preferred model we can optimize it by using tuning and ensembling methods such as bagging and boosting, optimize the probability with simple lines of code simply by passing the model to an optimization function.\n",
         "\n",
-        "Pycaret has several analysis functions such as plotting, evaluation, interpretation and EDA using Autoviz so that assist data scientists in providing explainabilty to the model.\n",
+        "Pycaret has several analysis functions such as plotting, evaluation, interpretation and EDA using Autoviz that assist data scientists in providing explainabilty to the model.\n",
         "\n",
         "It also has deployment functions so that models can be saved as pickle files, deployed in the cloud or be converted into different programming languages such as Java or C.\n",
         "\n",
@@ -3085,7 +3085,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "I tested several combinations of parameter changes within the setup function and found that numeric imputation with median and removing outliers to yield the best results when models were compared "
+        "I tested several combinations of parameter changes within the setup function and found numeric imputation with median and removing outliers yielded the best results when models were compared "
       ],
       "metadata": {
         "id": "aRxAXWp5EjpX"
@@ -3891,7 +3891,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Mean accuracy of lr > mean accuracy tuned_lr therefore we will stick with the original model"
+        "Mean accuracy of lr < mean accuracy tuned_lr therefore we will select the tuned logistic regression model"
       ],
       "metadata": {
         "id": "EjmMzpgkGjkA"
@@ -3931,15 +3931,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Mean accuracy tuned_lr > mean accuracy lr"
-      ],
-      "metadata": {
-        "id": "_OBGBS1fncmI"
-      }
     },
     {
       "cell_type": "code",
@@ -4376,30 +4367,33 @@
         "The Random Forest model is extremely basic. Data preprocessing has been executed based on intuition and a limited amount of personal experience. It is possible that some of the 0 values under pregnancy were actually nulls and should have been replaced with the variables mean or median. \n",
         "The target variable was unbalanced perhaps this should have been addressed, also maybe outliers should have been removed before training the classifier. However this level of preprocessing would have required further research in order for me to implement it manually.\n",
         "Conversely there is a an extensive level of preprocessing that can be implemented easily using the AutoML approach with just one line of code as previously described. There is still a level of intuition and experience required in order to choose the appropriate preprocesses. In this case, as in the Random Forest training set, I imputed the median of variables with null values and also removed outliers.\n",
-        "I selected these processes based accuracy when the models were compared. As the models are evaluated using 10-fold stratified cross-validation, this result was different for each run and therefore may not have been the most appropriate method to use.\n",
+        "I selected these processes based on accuracy when the models were compared. As the models are evaluated using 10-fold stratified cross-validation, this result was different for each run and therefore may not have been the most appropriate method to use.\n",
         "\n",
         "### Evaluation\n",
-        "The accuracy score of 0.7922 for the Random Forest model is more than likely a fluke give that the classifier was only trained once on an 80/20 split. In order the evaluate the validity of this result the model would need to be trained multiple preferably using a k-fold cross-validation approach. \n",
+        "The accuracy score of 0.7922 for the Random Forest model is more than likely a fluke give that the classifier was only trained once on an 80/20 split. In order to evaluate the validity of this result the model would need to be trained multiple preferably using a k-fold cross-validation approach. \n",
         "\n",
-        "AutoML uses a stratified 10-fold cross-validation approach to compare the classification models. This method is implemented by default which is extremely beneficial in validating the various metrics for each model. Even though the best accuracy score was lower(0.7692) than that of the Random Forrest model, I trust that this is a truly representative measure of the models perforamce. I chose the logistic regression model in this case based on the accuracy metric as this was the metric being used to evaluate the Random Forest model.\n",
+        "AutoML uses a stratified 10-fold cross-validation approach to compare the classification models. This method is implemented by default which is extremely beneficial in validating the various metrics for each model. Even though the best accuracy score was lower(0.7692) than that of the Random Forest model, I trust that this is a truly representative measure of the models performance. I chose the logistic regression model in this case based on the accuracy metric as this was the metric being used to evaluate the Random Forest model.\n",
         "However, F1 may have been a more appropriate metric to use for model selection which would have resulted in the training of a Naive Bayes classification model. \n",
         "\n",
-        "### Visualiztion\n",
-        "The visualiztions I created for the Random Forest model are basic and some such as feature importance are built using chunky blocks of code. However, there are 21 plots available to navigate using the evaluate_model() function in PyCaret. The ease of availability of these visualization provides explainability to the automl model.\n",
+        "### Visualization\n",
+        "The visualizations I created for the Random Forest model are basic and some such as feature importance are built using chunky blocks of code. However, there are 21 plots available to navigate using the evaluate_model() function in PyCaret. The ease of availability of these visualization provides explainability to the automl model.\n",
         "\n",
         "### Consensus\n",
         "Overall depite yielding lower accuracy I would chose the autoML classifier as;\n",
         "  1. I can trust the validity of the accuracy score that is measured because of the built-in stratified 10-fold cross validation approach used;\n",
         "  2. Hyperparameter tuning can be easily implemented\n",
-        "  3. There are built-in visualization function that assist in analysis and;\n",
+        "  3. There are built-in visualization function that assist in analysis;\n",
         "  4. Models can be easily deployed to production in a cloud environment.\n",
         "\n",
         "AutoML using Pycaret is not a one-touch magic solution to machine learning however, while the library makes preprocessing of data quicker and easier to do we still need to know which preprocesses we *should* be implementing. Explainability in machine learning is also extremely important. Pycaret may seem like a bit of a blackbox therefore understanding how each of it's functions work and how to return their outcomes is essential in order to explain your model.\n",
         "\n",
         "## Acknowledgements\n",
         "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2245318/\n",
+        "\n",
         "https://www.sciencedirect.com/science/article/pii/S2352914816300016\n",
+        "\n",
         "https://towardsdatascience.com/what-is-automl-6ddf27040f27\n",
+        "\n",
         "https://pycaret.gitbook.io/docs/\n"
       ],
       "metadata": {
